--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <div class="container header__container">
       <!-- nav -->
       <nav class="nav__container">
-        <a href="./index.html" class="logo nav__logo">
-          <span class="logo__blue">Web</span>
-          Studio
-        </a>
+        <a href="./index.html" class="logo nav__logo"><span class="logo__blue">Web</span>Studio</a>
         <ul class="nav__list">
           <li class="nav__item">
             <a href="./index.html" class="nav__link header__link nav__link--active" id="active">Студія</a>
@@ -47,16 +44,14 @@
             <svg class="header-contact__icon" width="16" height="12">
               <use href="./images/icons.svg#mail"></use>
             </svg>
-            info@devstudio.com
-          </a>
+            info@devstudio.com</a>
         </li>
         <li class="header-contact__item">
           <a href="tel:+380961111111" class="header-contact__tel header__link">
             <svg class="header-contact__icon" width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
             </svg>
-            +38 096 111 11 11
-          </a>
+            +38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -367,17 +362,13 @@
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__wrapper">
-        <a href="./index.html" class="logo footer__logo">
-          <span class="logo__blue">Web</span>
-          Studio
-        </a>
+        <a href="./index.html" class="logo footer__logo"><span class="logo__blue">Web</span>Studio</a>
         <address class="address">
           <ul class="footer__list">
             <li class="footer__item">
               <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                class="footer__link footer__link--white" target="_blank" rel="noopener noreferrer nofollow">
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
+                class="footer__link footer__link--white" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
+                пр-т Лесі Українки, 26</a>
             </li>
             <li class="footer__item">
               <a href="mailto:info@devstudio.com" class="footer__link" lang="en">info@devstudio.com</a>
